Add new industries

--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -223,21 +223,25 @@ STR_CARGO_UNIT_WRKR                  :{SIGNED_WORD} worker{P 0 "" s}
 STR_CARGO_UNIT_ZINC                  :{WEIGHT} of zinc
 
 STR_INDUSTRY_NAME_AMMONIA_PLANT     :Ammonia Plant
+STR_INDUSTRY_NAME_ARABLE_FARM       :Arable Farm
 STR_INDUSTRY_NAME_BANK              :Bank
 STR_INDUSTRY_NAME_CHEMICAL_PLANT    :Chemical Plant
 STR_INDUSTRY_NAME_CIDER_MILL        :Cider Mill
 STR_INDUSTRY_NAME_CLAY_PIT          :Clay Pit
 STR_INDUSTRY_NAME_COAL_MINE         :Coal Mine
+STR_INDUSTRY_NAME_COFFEE_ESTATE     :Coffee Estate
 STR_INDUSTRY_NAME_COPPER_ORE_MINE   :Copper Ore Mine
+STR_INDUSTRY_NAME_COPPER_SMELTER    :Copper Smelter
 STR_INDUSTRY_NAME_DAIRY             :Dairy
-STR_INDUSTRY_NAME_DIARY_FARM        :Dairy Farm
 STR_INDUSTRY_NAME_DIAMOND_MINE      :Diamond Mine
+STR_INDUSTRY_NAME_DIARY_FARM        :Dairy Farm
 STR_INDUSTRY_NAME_DREDGING_SITE     :Dredging Site
 STR_INDUSTRY_NAME_FACTORY           :Factory
 STR_INDUSTRY_NAME_FARM              :Farm
-STR_INDUSTRY_NAME_FISH_FARM         :Fish Farm
 STR_INDUSTRY_NAME_FISHING_GROUNDS   :Fishing Grounds
 STR_INDUSTRY_NAME_FISHING_HARBOR    :Fishing Harbor
+STR_INDUSTRY_NAME_FISH_FARM         :Fish Farm
+STR_INDUSTRY_NAME_FLOUR_MILL        :Flour Mill
 STR_INDUSTRY_NAME_FOOD_PROCESSING_PLANT :Food Processing Plant
 STR_INDUSTRY_NAME_FOREST            :Forest
 STR_INDUSTRY_NAME_FRUIT_PLANTATION  :Fruit Plantation
@@ -248,6 +252,7 @@ STR_INDUSTRY_NAME_HERDING_CO_OP     :Herding Co-op
 STR_INDUSTRY_NAME_IRON_ORE_MINE     :Iron Ore Mine
 STR_INDUSTRY_NAME_LUMBER_MILL       :Lumber Mill
 STR_INDUSTRY_NAME_METAL_WORKSHOP    :Metal Workshop
+STR_INDUSTRY_NAME_NITRATE_MINE      :Nitrate Mine
 STR_INDUSTRY_NAME_OIL_REFINERY      :Oil Refinery
 STR_INDUSTRY_NAME_OIL_RIG           :Oil Rig
 STR_INDUSTRY_NAME_OIL_WELLS         :Oil Wells
@@ -261,6 +266,7 @@ STR_INDUSTRY_NAME_POWER_STATION     :Power Station
 STR_INDUSTRY_NAME_PRINTING_WORKS    :Printing Works
 STR_INDUSTRY_NAME_PYRITE_MINE       :Pyrite Mine
 STR_INDUSTRY_NAME_PYRITE_SMELTER    :Pyrite Smelter
+STR_INDUSTRY_NAME_RANCH             :Ranch
 STR_INDUSTRY_NAME_RUBBER_PLANTATION :Rubber Plantation
 STR_INDUSTRY_NAME_SAWMILL           :Sawmill
 STR_INDUSTRY_NAME_SCRAP_YARD        :Scrap Yard
@@ -268,6 +274,7 @@ STR_INDUSTRY_NAME_STEEL_MILL        :Steel Mill
 STR_INDUSTRY_NAME_STOCKYARD         :Stockyard
 STR_INDUSTRY_NAME_TOWNS             :Towns
 STR_INDUSTRY_NAME_TRADING_CENTRE    :Trading Centre
+STR_INDUSTRY_NAME_VINEYARD          :Vineyard
 STR_INDUSTRY_NAME_WATER_SUPPLY      :Water Supply
 STR_INDUSTRY_NAME_WATER_TOWER       :Water Tower
 STR_INDUSTRY_NAME_WHARF             :Wharf
