--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -10,7 +10,7 @@ STR_PARAM_ECONOMY_VANILLA_SUBTROPICAL:工厂与钻石（原版热带）
 STR_PARAM_ECONOMY_TOYLAND       :奇幻（玩具城）
 STR_PARAM_ECONOMY_BASIC_TEMPERATE:炼钢厂与沙（FIRS基础温带）
 STR_PARAM_ECONOMY_BASIC_ARCTIC  :造纸厂与化工厂（FIRS基础寒带）
-STR_PARAM_ECONOMY_BASIC_TROPICAL:基础热带
+STR_PARAM_ECONOMY_BASIC_TROPICAL:咖啡与酒 (FIRS基础热带)
 
 STR_PARAM_PRESET                :全局选项 - 预设玩法
 STR_PARAM_PRESET_DESC           :选择一个预设选项来快速决定整体玩法。{}{}玩法的各个具体方面可以通过后面的参数来覆盖调节。
