--- a/industry/lang/english-uk.lng
+++ b/industry/lang/english-uk.lng
@@ -12,7 +12,7 @@ STR_PARAM_ECONOMY_VANILLA_SUBTROPICAL:Factory & Diamonds (Vanilla Sub-Tropical)
 STR_PARAM_ECONOMY_TOYLAND       :Toyland
 STR_PARAM_ECONOMY_BASIC_TEMPERATE:Steelwork & Sand (Basic Temperate)
 STR_PARAM_ECONOMY_BASIC_ARCTIC  :Paper Mill & Chemical Plant (Basic Arctic)
-STR_PARAM_ECONOMY_BASIC_TROPICAL:Basic Tropical
+STR_PARAM_ECONOMY_BASIC_TROPICAL:Coffee & Alcohol (Basic Tropical)
 
 STR_PARAM_PRESET                :Global - Preset
 STR_PARAM_PRESET_DESC           :Choose a preset that determines the overall playstyle.{}{}You can also override aspects of gameplay with the following parameters.
