--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -13,6 +13,17 @@ STR_PARAM_NIGHT_MODE_AUTO_DETECT:Auto Detect
 STR_PARAM_NIGHT_MODE_DISABLED   :Disabled
 STR_PARAM_NIGHT_MODE_ENABLED    :Enabled
 
+STR_PARAM_ROSTER                :Roster
+STR_PARAM_ROSTER_DESC           :Choose the roster of vehicles
+STR_PARAM_ALL                   :China
+STR_PARAM_DOVEMERE              :Wuhu
+STR_PARAM_NORBURY               :Beijing
+
+STR_PARAM_EARLY_IMPORTED_VEHICLES       :Early Imported Vehicles
+STR_PARAM_EARLY_IMPORTED_VEHICLES_DESC  :Whether to include imported vehicles for the early game
+STR_PARAM_EARLY_IMPORTED_VEHICLES_DISABLED:Disabled
+STR_PARAM_EARLY_IMPORTED_VEHICLES_ENABLED:Enabled
+
 STR_RV_HAPPYONE_BUS_NAME        :Ford F-60 Canadian Military Pattern Combination Bus (gasoline)
 STR_RV_RIME_NAME                :Songhuajiang Type-57 Bus (gasoline)
 STR_RV_LONGRIVER_NAME           :Changjiang CJ640B Bus (gasoline)
