(RV) Add translation

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -13,6 +13,24 @@ STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
 STR_PARAM_NIGHT_MODE_DISABLED   :不使用
 STR_PARAM_NIGHT_MODE_ENABLED    :使用
 
+STR_PARAM_ROSTER                :车辆组
+STR_PARAM_ROSTER_DESC           :选择使用哪个车辆组
+STR_PARAM_ROSTER_ALL            :全中国
+STR_PARAM_ROSTER_DOVEMERE       :芜湖
+STR_PARAM_ROSTER_NORBURY        :北京
+
+STR_PARAM_EARLY_IMPORTED_VEHICLES               :早期进口车
+STR_PARAM_EARLY_IMPORTED_VEHICLES_DESC          :如何处理早期进口车辆
+STR_PARAM_EARLY_IMPORTED_VEHICLES_DISABLED      :不使用
+STR_PARAM_EARLY_IMPORTED_VEHICLES_ENABLED_CHEAP :使用 - 便宜
+STR_PARAM_EARLY_IMPORTED_VEHICLES_ENABLED       :使用
+STR_PARAM_EARLY_IMPORTED_VEHICLES_ENABLED_COSTLY:使用 - 昂贵
+
+STR_PARAM_FANTASY_FREIGHT_TRAMS         :架空设定 - 货运电车/地铁/单轨
+STR_PARAM_FANTASY_FREIGHT_TRAMS_DESC    :是否加入现实中仅限客运的电车/地铁/单轨型号的架空货运改装版本
+STR_PARAM_FANTASY_FREIGHT_TRAMS_DISABLED:不使用
+STR_PARAM_FANTASY_FREIGHT_TRAMS_ENABLED :使用
+
 STR_RV_HAPPYONE_BUS_NAME        :福特 F-60 加拿大军用型卡车改装公交车 (汽油)
 STR_RV_RIME_NAME                :松花江五七式公交车 (汽油)
 STR_RV_LONGRIVER_NAME           :长江 CJ640B 公交车 (汽油)
