--- a/bridge/lang/english-uk.lng
+++ b/bridge/lang/english-uk.lng
@@ -1,3 +1,18 @@
 ##grflangid 0x00
 STR_GRF_NAME                    :AWBS - Ahyangyi's Wuhu Bridge Set
 STR_GRF_DESC                    :A bridge set based on bridges in Wuhu, Anhui, China.
+
+STR_PARAM_SPEED_LIMIT               :Speed Limit
+STR_PARAM_SPEED_LIMIT_DESC          :The speed limit of the bridges{}{}Normal - Balanced against vanilla bridges
+STR_PARAM_SPEED_LIMIT_SEVERE        :SEVERE
+STR_PARAM_SPEED_LIMIT_RESTRICTIVE   :Restrictive
+STR_PARAM_SPEED_LIMIT_NORMAL        :Normal
+STR_PARAM_SPEED_LIMIT_PERMISSIVE    :Permissive
+STR_PARAM_SPEED_LIMIT_FANTASY       :Fantasy
+STR_PARAM_SPEED_LIMIT_NO_LIMIT      :No Limit
+
+STR_PARAM_NIGHT_MODE            :Night mode
+STR_PARAM_NIGHT_MODE_DESC       :Use night graphics suitable for NightGFX
+STR_PARAM_NIGHT_MODE_AUTO_DETECT:Auto Detect
+STR_PARAM_NIGHT_MODE_DISABLED   :Disabled
+STR_PARAM_NIGHT_MODE_ENABLED    :Enabled
