--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -31,46 +31,44 @@ STR_PARAM_FANTASY_FREIGHT_TRAMS_DESC    :Whether to include freighter variations
 STR_PARAM_FANTASY_FREIGHT_TRAMS_DISABLED:Disabled
 STR_PARAM_FANTASY_FREIGHT_TRAMS_ENABLED :Enabled
 
-STR_RV_HAPPYONE_BUS_NAME        :Ford F-60 Canadian Military Pattern Combination Bus (gasoline)
-STR_RV_RIME_NAME                :Songhuajiang Type-57 Bus (gasoline)
-STR_RV_NORTHWING_NAME           :Jingyi BK640 Bus (gasoline)
-STR_RV_LONGRIVER_NAME           :Changjiang CJ640B Bus (gasoline)
-STR_RV_LONGRIVER_ARTICULATED_NAME :Changjiang CJ660B Bus (gasoline)
-STR_RV_LONGRIVER_COACH_NAME     :Changjiang CJ642B Coach (gasoline)
-STR_RV_LONGRIVER_2DECKER_NAME   :Changjiang Flxible CJ6100SGCH Double-Decker Bus (diesel)
-STR_RV_RAREGEM_NAME             :Chery Wanda WD6110CHEVG01 Bus (PHEV)
-STR_RV_MILKYWAY_2DECKER_NAME    :Yutong ZK6116HNGS2 Double-Decker Bus (diesel)
+STR_VEHICLE_HAPPYONE_BUS_NAME           :Ford F-60 Canadian Military Pattern Combination Bus (gasoline)
+STR_VEHICLE_RIME_NAME                   :Songhuajiang Type-57 Bus (gasoline)
+STR_VEHICLE_NORTHWING_NAME              :Jingyi BK640 Bus (gasoline)
+STR_VEHICLE_LONGRIVER_NAME              :Changjiang CJ640B Bus (gasoline)
+STR_VEHICLE_LONGRIVER_ARTICULATED_NAME  :Changjiang CJ660B Bus (gasoline)
+STR_VEHICLE_LONGRIVER_COACH_NAME        :Changjiang CJ642B Coach (gasoline)
+STR_VEHICLE_LONGRIVER_2DECKER_NAME      :Changjiang Flxible CJ6100SGCH Double-Decker Bus (diesel)
+STR_VEHICLE_RAREGEM_NAME                :Chery Wanda WD6110CHEVG01 Bus (PHEV)
+STR_VEHICLE_MILKYWAY_2DECKER_NAME       :Yutong ZK6116HNGS2 Double-Decker Bus (diesel)
 
-STR_RV_HAPPYONE_NAME            :Ford F-60 Canadian Military Pattern Truck (gasoline)
-STR_RV_LEEWAY_NAME              :Dodge T-234 Truck (gasoline)
-STR_RV_FREEDOM_NAME             :FAW Jiefang CA10 Truck (gasoline)
-STR_RV_FREEDOM_TANKER_NAME      :FAW Jiefang CA10 Tank Truck (gasoline)
-STR_RV_FREEDOM_TARPAULIN_NAME   :FAW Jiefang CA10 Covered Wagon Truck (gasoline)
-STR_RV_FREEDOM_MK_II_NAME       :FAW Jiefang CA15 Truck (gasoline)
-STR_RV_YELLOWRIVER_NAME         :Huanghe JN150 Truck (diesel)
-STR_RV_SHIELD_NAME              :C&C U+550 Truck (diesel)
+STR_VEHICLE_HAPPYONE_NAME               :Ford F-60 Canadian Military Pattern Truck (gasoline)
+STR_VEHICLE_LEEWAY_NAME                 :Dodge T-234 Truck (gasoline)
+STR_VEHICLE_FREEDOM_NAME                :FAW Jiefang CA10 Truck (gasoline)
+STR_VEHICLE_FREEDOM_TANKER_NAME         :FAW Jiefang CA10 Tank Truck (gasoline)
+STR_VEHICLE_FREEDOM_TARPAULIN_NAME      :FAW Jiefang CA10 Covered Wagon Truck (gasoline)
+STR_VEHICLE_FREEDOM_MK_II_NAME          :FAW Jiefang CA15 Truck (gasoline)
+STR_VEHICLE_YELLOWRIVER_NAME            :Huanghe JN150 Truck (diesel)
+STR_VEHICLE_SHIELD_NAME                 :C&C U+550 Truck (diesel)
 
-STR_RV_NOVA_NAME                :CRRC Puzhen Alstom Innovia Monorail 300 (EMU)
-STR_TRAIN_NOVA_NAME             :CRRC Puzhen Alstom Innovia Monorail 300 (EMU)
+STR_VEHICLE_NOVA_NAME                   :CRRC Puzhen Alstom Innovia Monorail 300 (EMU)
 
-STR_RV_HAPPYONE_BUS_DESC        :{SILVER}
-STR_RV_RIME_DESC                :{SILVER}After the mass-production of the FAW Jiefang CA 10 trucks, many factories started to produce buses by installing a bus body on the chassis.{}{}Songhuajiang Type-57 was produced by the Weijian State-owned Machinery Factory in Harbin.
-STR_RV_NORTHWING_DESC           :{SILVER}
-STR_RV_LONGRIVER_DESC           :{SILVER}
-STR_RV_LONGRIVER_ARTICULATED_DESC :{SILVER}
-STR_RV_LONGRIVER_COACH_DESC     :{SILVER}
-STR_RV_LONGRIVER_2DECKER_DESC   :{SILVER}
-STR_RV_RAREGEM_DESC             :{SILVER}
-STR_RV_MILKYWAY_2DECKER_DESC    :{SILVER}
+STR_VEHICLE_HAPPYONE_BUS_DESC           :{SILVER}
+STR_VEHICLE_RIME_DESC                   :{SILVER}After the mass-production of the FAW Jiefang CA 10 trucks, many factories started to produce buses by installing a bus body on the chassis.{}{}Songhuajiang Type-57 was produced by the Weijian State-owned Machinery Factory in Harbin.
+STR_VEHICLE_NORTHWING_DESC              :{SILVER}
+STR_VEHICLE_LONGRIVER_DESC              :{SILVER}
+STR_VEHICLE_LONGRIVER_ARTICULATED_DESC  :{SILVER}
+STR_VEHICLE_LONGRIVER_COACH_DESC        :{SILVER}
+STR_VEHICLE_LONGRIVER_2DECKER_DESC      :{SILVER}
+STR_VEHICLE_RAREGEM_DESC                :{SILVER}
+STR_VEHICLE_MILKYWAY_2DECKER_DESC       :{SILVER}
 
-STR_RV_HAPPYONE_DESC            :{SILVER}
-STR_RV_LEEWAY_DESC              :{SILVER}
-STR_RV_FREEDOM_DESC             :{SILVER}A licensed variant of the Soviet ZIS-150. The first mass-produced automobile in China.
-STR_RV_FREEDOM_TANKER_DESC      :{SILVER}A licensed variant of the Soviet ZIS-150. The first mass-produced automobile in China.
-STR_RV_FREEDOM_TARPAULIN_DESC   :{SILVER}A licensed variant of the Soviet ZIS-150. The first mass-produced automobile in China.
-STR_RV_FREEDOM_MK_II_DESC       :{SILVER}
-STR_RV_YELLOWRIVER_DESC         :{SILVER}Based on reverse-engineered Škoda 706 RT. The first heavy-duty truck produced in China.
-STR_RV_SHIELD_DESC              :{SILVER}
+STR_VEHICLE_HAPPYONE_DESC               :{SILVER}
+STR_VEHICLE_LEEWAY_DESC                 :{SILVER}
+STR_VEHICLE_FREEDOM_DESC                :{SILVER}A licensed variant of the Soviet ZIS-150. The first mass-produced automobile in China.
+STR_VEHICLE_FREEDOM_TANKER_DESC         :{SILVER}A licensed variant of the Soviet ZIS-150. The first mass-produced automobile in China.
+STR_VEHICLE_FREEDOM_TARPAULIN_DESC      :{SILVER}A licensed variant of the Soviet ZIS-150. The first mass-produced automobile in China.
+STR_VEHICLE_FREEDOM_MK_II_DESC          :{SILVER}
+STR_VEHICLE_YELLOWRIVER_DESC            :{SILVER}Based on reverse-engineered Škoda 706 RT. The first heavy-duty truck produced in China.
+STR_VEHICLE_SHIELD_DESC                 :{SILVER}
 
-STR_RV_NOVA_DESC                :{SILVER}
-STR_TRAIN_NOVA_DESC             :{SILVER}
+STR_VEHICLE_NOVA_DESC                   :{SILVER}
