(rv) random updates

--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -31,6 +31,12 @@ STR_PARAM_FANTASY_FREIGHT_TRAMS_DESC    :Whether to include freighter variations
 STR_PARAM_FANTASY_FREIGHT_TRAMS_DISABLED:Disabled
 STR_PARAM_FANTASY_FREIGHT_TRAMS_ENABLED :Enabled
 
+STR_PARAM_BUS_CAPACITY          :Bus Capacity
+STR_PARAM_BUS_CAPACITY_DESC     :Adjust the capacity of the buses
+STR_PARAM_BUS_CAPACITY_LOW      :Low
+STR_PARAM_BUS_CAPACITY_STANDARD :Standard
+STR_PARAM_BUS_CAPACITY_CRAMMED  :Crammed
+
 STR_VEHICLE_HAPPYONE_BUS_NAME           :Ford F-60 Canadian Military Pattern Combination Bus (gasoline)
 STR_VEHICLE_RIME_NAME                   :Songhuajiang Type-57 Bus (gasoline)
 STR_VEHICLE_NORTHWING_NAME              :Jingyi BK640 Bus (gasoline)
@@ -59,7 +65,7 @@ STR_VEHICLE_LONGRIVER_DESC              :{SILVER}
 STR_VEHICLE_LONGRIVER_ARTICULATED_DESC  :{SILVER}
 STR_VEHICLE_LONGRIVER_COACH_DESC        :{SILVER}
 STR_VEHICLE_LONGRIVER_2DECKER_DESC      :{SILVER}
-STR_VEHICLE_RAREGEM_DESC                :{SILVER}
+STR_VEHICLE_RAREGEM_DESC                :{SILVER}The WD6110CHEVG01 bus is a common sight in the streets of Wuhu in the 2020s.
 STR_VEHICLE_MILKYWAY_2DECKER_DESC       :{SILVER}
 
 STR_VEHICLE_HAPPYONE_DESC               :{SILVER}
