--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -58,7 +58,7 @@ STR_VEHICLE_LONGRIVER_DESC              :{SILVER}
 STR_VEHICLE_LONGRIVER_ARTICULATED_DESC  :{SILVER}
 STR_VEHICLE_LONGRIVER_COACH_DESC        :{SILVER}
 STR_VEHICLE_LONGRIVER_2DECKER_DESC      :{SILVER}
-STR_VEHICLE_RAREGEM_DESC                :{SILVER}
+STR_VEHICLE_RAREGEM_DESC                :{SILVER}WD6110CHEVG01 公交车是 2020 年代芜湖大街上最为常见的车型。
 STR_VEHICLE_MILKYWAY_2DECKER_DESC       :{SILVER}
 
 STR_VEHICLE_HAPPYONE_DESC               :{SILVER}
