--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -1,3 +1,6 @@
 ##grflangid 0x00
 STR_GRF_NAME                    :AWSS - Ahyangyi's Wuhu Station Set
 STR_GRF_DESC                    :A station set based on stations in Wuhu, Anhui, China.
+
+STR_STATION_DOVEMERE_2018_NAME  :Wuhu Railway Station (2018)
+STR_STATION_DOVEMERE_1992_NAME  :Wuhu Railway Station (1992)
