(rv/WIP) southwing

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -34,6 +34,7 @@ STR_PARAM_FANTASY_FREIGHT_TRAMS_ENABLED :使用
 STR_VEHICLE_HAPPYONE_BUS_NAME           :福特 F-60 加拿大军用型卡车改装公交车 (汽油)
 STR_VEHICLE_RIME_NAME                   :松花江五七式公交车 (汽油)
 STR_VEHICLE_NORTHWING_NAME              :京一 BK640 公交车 (汽油)
+STR_VEHICLE_SOUTHWING_ARTICULATED_NAME  :上海 SK660 铰接式公交车 (汽油)
 STR_VEHICLE_LONGRIVER_NAME              :长江 CJ640B 公交车 (汽油)
 STR_VEHICLE_LONGRIVER_ARTICULATED_NAME  :长江 CJ660B 铰接式公交车 (汽油)
 STR_VEHICLE_LONGRIVER_COACH_NAME        :长江 CJ642B 长途大巴 (汽油)
@@ -54,6 +55,7 @@ STR_VEHICLE_NOVA_NAME                   :中车浦镇阿尔斯通 INNOVIA 300型
 STR_VEHICLE_HAPPYONE_BUS_DESC           :{SILVER}
 STR_VEHICLE_RIME_DESC                   :{SILVER}在解放 CA10 卡车量产后，各地工厂纷纷生产基于 CA10 底盘的公交车。{}{}松花江五七式公交车是由哈尔滨国营伟建机器厂生产的。
 STR_VEHICLE_NORTHWING_DESC              :{SILVER}
+STR_VEHICLE_SOUTHWING_ARTICULATED_DESC  :{SILVER}
 STR_VEHICLE_LONGRIVER_DESC              :{SILVER}
 STR_VEHICLE_LONGRIVER_ARTICULATED_DESC  :{SILVER}
 STR_VEHICLE_LONGRIVER_COACH_DESC        :{SILVER}
