--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -40,6 +40,7 @@ STR_PARAM_BUS_CAPACITY_CRAMMED  :Crammed
 STR_VEHICLE_HAPPYONE_BUS_NAME           :Ford F-60 Canadian Military Pattern Combination Bus (gasoline)
 STR_VEHICLE_RIME_NAME                   :Songhuajiang Type-57 Bus (gasoline)
 STR_VEHICLE_NORTHWING_NAME              :Jingyi BK640 Bus (gasoline)
+STR_VEHICLE_NORTHWING_ARTICULATED_NAME  :Jingyi BK670 Articulated Bus (diesel)
 STR_VEHICLE_SOUTHWING_ARTICULATED_NAME  :Shanghai SK660 Articulated Bus (gasoline)
 STR_VEHICLE_LONGRIVER_NAME              :Changjiang CJ640B Bus (gasoline)
 STR_VEHICLE_LONGRIVER_ARTICULATED_NAME  :Changjiang CJ660B Articulated Bus (gasoline)
@@ -62,6 +63,7 @@ STR_VEHICLE_NOVA_NAME                   :CRRC Puzhen Alstom Innovia Monorail 300
 STR_VEHICLE_HAPPYONE_BUS_DESC           :{SILVER}
 STR_VEHICLE_RIME_DESC                   :{SILVER}After the mass-production of the FAW Jiefang CA 10 trucks, many factories started to produce buses by installing a bus body on the chassis.{}{}Songhuajiang Type-57 was produced by the Weijian State-owned Machinery Factory in Harbin.
 STR_VEHICLE_NORTHWING_DESC              :{SILVER}
+STR_VEHICLE_NORTHWING_ARTICULATED_DESC  :{SILVER}
 STR_VEHICLE_SOUTHWING_ARTICULATED_DESC  :{SILVER}
 STR_VEHICLE_LONGRIVER_DESC              :{SILVER}
 STR_VEHICLE_LONGRIVER_ARTICULATED_DESC  :{SILVER}
