(rv) fix brand name

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -33,8 +33,8 @@ STR_PARAM_FANTASY_FREIGHT_TRAMS_ENABLED :使用
 
 STR_VEHICLE_HAPPYONE_BUS_NAME           :福特 F-60 加拿大军用型卡车改装公交车 (汽油)
 STR_VEHICLE_RIME_NAME                   :松花江五七式公交车 (汽油)
-STR_VEHICLE_NORTHWING_NAME              :京一 BK640 公交车 (汽油)
-STR_VEHICLE_NORTHWING_ARTICULATED_NAME  :京一 BK670 铰接式公交车 (柴油)
+STR_VEHICLE_NORTHWING_NAME              :京华 BK640 公交车 (汽油)
+STR_VEHICLE_NORTHWING_ARTICULATED_NAME  :京华 BK670 铰接式公交车 (柴油)
 STR_VEHICLE_SOUTHWING_ARTICULATED_NAME  :上海 SK660 铰接式公交车 (汽油)
 STR_VEHICLE_LONGRIVER_NAME              :长江 CJ640B 公交车 (汽油)
 STR_VEHICLE_LONGRIVER_ARTICULATED_NAME  :长江 CJ660B 铰接式公交车 (汽油)
