(rv/wip) template for a new bus

--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -46,6 +46,7 @@ STR_VEHICLE_LONGRIVER_NAME              :Changjiang CJ640B Bus (gasoline)
 STR_VEHICLE_LONGRIVER_ARTICULATED_NAME  :Changjiang CJ660B Articulated Bus (gasoline)
 STR_VEHICLE_LONGRIVER_COACH_NAME        :Changjiang CJ642B Coach (gasoline)
 STR_VEHICLE_LONGRIVER_2DECKER_NAME      :Changjiang Flxible CJ6100SGCH Double-Decker Bus (diesel)
+STR_VEHICLE_JOYFIELD_NAME               :Beiqi Foton AUV BJ6123EVCA Bus (BEV)
 STR_VEHICLE_RAREGEM_NAME                :Chery Wanda WD6110CHEVG01 Bus (PHEV)
 STR_VEHICLE_MILKYWAY_2DECKER_NAME       :Yutong ZK6116HNGS2 Double-Decker Bus (diesel)
 
@@ -69,6 +70,7 @@ STR_VEHICLE_LONGRIVER_DESC              :{SILVER}
 STR_VEHICLE_LONGRIVER_ARTICULATED_DESC  :{SILVER}
 STR_VEHICLE_LONGRIVER_COACH_DESC        :{SILVER}
 STR_VEHICLE_LONGRIVER_2DECKER_DESC      :{SILVER}
+STR_VEHICLE_JOYFIELD_DESC               :{SILVER}
 STR_VEHICLE_RAREGEM_DESC                :{SILVER}The WD6110CHEVG01 bus is a common sight in the streets of Wuhu in the 2020s.
 STR_VEHICLE_MILKYWAY_2DECKER_DESC       :{SILVER}
 
