--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -61,6 +61,7 @@ STR_VEHICLE_YELLOWRIVER_NAME            :Huanghe JN150 Truck (diesel)
 STR_VEHICLE_SHIELD_NAME                 :C&C U+550 Truck (diesel)
 
 STR_VEHICLE_NOVA_NAME                   :CRRC Puzhen Alstom Innovia Monorail 300 (EMU)
+STR_VEHICLE_BURGER_NAME                 :Jingyi BD540 Trolleybus
 
 STR_VEHICLE_HAPPYONE_BUS_DESC           :{SILVER}
 STR_VEHICLE_RIME_DESC                   :{SILVER}After the mass-production of the FAW Jiefang CA 10 trucks, many factories started to produce buses by installing a bus body on the chassis.{}{}Songhuajiang Type-57 was produced by the Weijian State-owned Machinery Factory in Harbin.
@@ -86,3 +87,4 @@ STR_VEHICLE_YELLOWRIVER_DESC            :{SILVER}Based on reverse-engineered Šk
 STR_VEHICLE_SHIELD_DESC                 :{SILVER}
 
 STR_VEHICLE_NOVA_DESC                   :{SILVER}
+STR_VEHICLE_BURGER_NAME                 :{SILVER}
