--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -87,4 +87,4 @@ STR_VEHICLE_YELLOWRIVER_DESC            :{SILVER}Based on reverse-engineered Šk
 STR_VEHICLE_SHIELD_DESC                 :{SILVER}
 
 STR_VEHICLE_NOVA_DESC                   :{SILVER}
-STR_VEHICLE_BURGER_NAME                 :{SILVER}
+STR_VEHICLE_BURGER_DESC                 :{SILVER}
