--- a/road/lang/chinese.lng
+++ b/road/lang/chinese.lng
@@ -2,6 +2,17 @@
 STR_GRF_NAME                    :ACRS - Ahyangyi 的中国道路模组
 STR_GRF_DESC                    :以中国的道路为主题的模组
 
+STR_PARAM_VANILLA_ROAD          :原版公路
+STR_PARAM_VANILLA_ROAD_DESC     :是否保留原版公路
+STR_PARAM_VANILLA_ROAD_DISABLED :不保留
+STR_PARAM_VANILLA_ROAD_ENABLED  :保留
+
+STR_PARAM_NIGHT_MODE            :夜景模式
+STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
+STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
+STR_PARAM_NIGHT_MODE_DISABLED   :不使用
+STR_PARAM_NIGHT_MODE_ENABLED    :使用
+
 STR_RT_MAIN_ASPHALT_CONS        :沥青主干路建设
 STR_RT_MAIN_ASPHALT_NAME        :沥青主干路
 
