--- a/road/lang/chinese.lng
+++ b/road/lang/chinese.lng
@@ -21,3 +21,6 @@ STR_RT_SLATE_BLOCK_NAME         :青石板路
 
 STR_RT_MOTORWAY_CONS            :高速公路建设
 STR_RT_MOTORWAY_NAME            :高速公路
+
+STR_RT_MONORAIL_CONS            :单轨建设
+STR_RT_MONORAIL_NAME            :单轨
