(bridge) Use string manager for names

--- a/bridge/lang/chinese.lng
+++ b/bridge/lang/chinese.lng
@@ -16,3 +16,8 @@ STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
 STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
 STR_PARAM_NIGHT_MODE_DISABLED   :不使用
 STR_PARAM_NIGHT_MODE_ENABLED    :使用
+
+STR_BRIDGE_YANGTZE_I            :悬索桥
+STR_BRIDGE_YANGTZE_I_PURCHASE   :建造悬索桥
+STR_BRIDGE_YANGTZE_I_DESC_RAIL  :悬索桥
+STR_BRIDGE_YANGTZE_I_DESC_ROAD  :悬索桥
