(bridge) bring text in line

--- a/bridge/lang/english-uk.lng
+++ b/bridge/lang/english-uk.lng
@@ -17,7 +17,7 @@ STR_PARAM_NIGHT_MODE_AUTO_DETECT:Auto Detect
 STR_PARAM_NIGHT_MODE_DISABLED   :Disabled
 STR_PARAM_NIGHT_MODE_ENABLED    :Enabled
 
-STR_BRIDGE_YANGTZE_I            :Cable-Stayed Bridge
-STR_BRIDGE_YANGTZE_I_PURCHASE   :Build Cable-Stayed Bridge
-STR_BRIDGE_YANGTZE_I_DESC_RAIL  :Cable-Stayed Bridge
-STR_BRIDGE_YANGTZE_I_DESC_ROAD  :Cable-Stayed Bridge
+STR_BRIDGE_YANGTZE_I            :Cable-Stayed, Concrete
+STR_BRIDGE_YANGTZE_I_PURCHASE   :Cable-Stayed, Concrete
+STR_BRIDGE_YANGTZE_I_DESC_RAIL  :Concrete Cable-Stayed Rail Bridge
+STR_BRIDGE_YANGTZE_I_DESC_ROAD  :Concrete Cable-Stayed Road Bridge
