--- a/bridge/lang/chinese.lng
+++ b/bridge/lang/chinese.lng
@@ -17,7 +17,7 @@ STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
 STR_PARAM_NIGHT_MODE_DISABLED   :不使用
 STR_PARAM_NIGHT_MODE_ENABLED    :使用
 
-STR_BRIDGE_YANGTZE_I            :悬索桥
-STR_BRIDGE_YANGTZE_I_PURCHASE   :建造悬索桥
-STR_BRIDGE_YANGTZE_I_DESC_RAIL  :悬索桥
-STR_BRIDGE_YANGTZE_I_DESC_ROAD  :悬索桥
+STR_BRIDGE_YANGTZE_I            :混凝土悬索
+STR_BRIDGE_YANGTZE_I_PURCHASE   :混凝土悬索
+STR_BRIDGE_YANGTZE_I_DESC_RAIL  :混凝土悬索公路桥
+STR_BRIDGE_YANGTZE_I_DESC_ROAD  :混凝土悬索铁路桥
