(bridge) multiple bridges

--- a/bridge/lang/chinese.lng
+++ b/bridge/lang/chinese.lng
@@ -21,3 +21,8 @@ STR_BRIDGE_YANGTZE_I            :混凝土悬索
 STR_BRIDGE_YANGTZE_I_PURCHASE   :混凝土悬索
 STR_BRIDGE_YANGTZE_I_DESC_RAIL  :混凝土悬索公路桥
 STR_BRIDGE_YANGTZE_I_DESC_ROAD  :混凝土悬索铁路桥
+
+STR_BRIDGE_ZHONGJIANG           :混凝土悬索
+STR_BRIDGE_ZHONGJIANG_PURCHASE  :混凝土悬索
+STR_BRIDGE_ZHONGJIANG_DESC_RAIL :混凝土悬索公路桥
+STR_BRIDGE_ZHONGJIANG_DESC_ROAD :混凝土悬索铁路桥
