(rv) new vehicle placeholder

--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -76,6 +76,7 @@ STR_VEHICLE_FREEDOM_TARPAULIN_NAME      :FAW Jiefang CA10 Covered Wagon Truck (g
 STR_VEHICLE_FREEDOM_MK_II_NAME          :FAW Jiefang CA15 Truck (gasoline)
 STR_VEHICLE_YELLOWRIVER_NAME            :Huanghe JN150 Truck (diesel)
 STR_VEHICLE_SHIELD_NAME                 :C&C U+550 Truck (diesel)
+STR_VEHICLE_JOYFIELD_LORRY_NAME         :Beiqi Foton Auman GTL Truck (diesel)
 
 STR_VEHICLE_NOVA_NAME                   :CRRC Puzhen Alstom Innovia Monorail 300 (EMU)
 STR_VEHICLE_BURGER_NAME                 :Jingyi BD540 Trolleybus
@@ -102,6 +103,7 @@ STR_VEHICLE_FREEDOM_TARPAULIN_DESC      :{SILVER}A licensed variant of the Sovie
 STR_VEHICLE_FREEDOM_MK_II_DESC          :{SILVER}
 STR_VEHICLE_YELLOWRIVER_DESC            :{SILVER}Based on reverse-engineered Škoda 706 RT. The first heavy-duty truck produced in China.
 STR_VEHICLE_SHIELD_DESC                 :{SILVER}
+STR_VEHICLE_JOYFIELD_LORRY_DESC         :{SILVER}
 
 STR_VEHICLE_NOVA_DESC                   :{SILVER}
 STR_VEHICLE_BURGER_DESC                 :{SILVER}
