--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -2,5 +2,7 @@
 STR_GRF_NAME                    :AWSS - Ahyangyi's Wuhu Station Set
 STR_GRF_DESC                    :A station set based on stations in Wuhu, Anhui, China.
 
-STR_STATION_DOVEMERE_2018_NAME  :Wuhu Railway Station (2018)
+STR_STATION_DOVEMERE_2018_NAME  :Station Building
 STR_STATION_DOVEMERE_1992_NAME  :Wuhu Railway Station (1992)
+
+STR_STATION_CLASS_DM18          :Wuhu Railway Station (2018)
