(rv) New coach (placeholder)

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -49,6 +49,7 @@ STR_VEHICLE_JOYFIELD_NAME               :北汽福田欧辉 BJ6123EVCA 公交车
 STR_VEHICLE_JOYFIELD_ARTICULATED_NAME   :北汽福田欧辉 BJ6160SHEVCA 铰接式公交车 (插电混动)
 STR_VEHICLE_RAREGEM_NAME                :奇瑞万达 WD6110CHEVG01 公交车 (插电混动)
 STR_VEHICLE_MILKYWAY_2DECKER_NAME       :宇通 ZK6116HNGS2 双层公交车 (柴油)
+STR_VEHICLE_MILKYWAY_COACH_NAME         :宇通 ZK6888HC9 长途大巴 (柴油)
 
 STR_VEHICLE_HAPPYONE_NAME               :福特 F-60 加拿大军用型卡车 (汽油)
 STR_VEHICLE_FREEDOM_NAME                :一汽解放 CA10 卡车 (汽油)
