--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -67,6 +67,7 @@ STR_VEHICLE_JOYFIELD_NAME               :Beiqi Foton AUV BJ6123EVCA Bus (BEV)
 STR_VEHICLE_JOYFIELD_ARTICULATED_NAME   :Beiqi Foton AUV BJ6160SHEVCA Articulated Bus (PHEV)
 STR_VEHICLE_RAREGEM_NAME                :Chery Wanda WD6110CHEVG01 Bus (PHEV)
 STR_VEHICLE_MILKYWAY_2DECKER_NAME       :Yutong ZK6116HNGS2 Double-Decker Bus (diesel)
+STR_VEHICLE_MILKYWAY_COACH_NAME         :Yutong ZK6888HC9 Coach (diesel)
 
 STR_VEHICLE_HAPPYONE_NAME               :Ford F-60 Canadian Military Pattern Truck (gasoline)
 STR_VEHICLE_LEEWAY_NAME                 :Dodge T-234 Truck (gasoline)
