(rv) quickfix desc

--- a/road_vehicle/lang/chinese.lng
+++ b/road_vehicle/lang/chinese.lng
@@ -75,6 +75,7 @@ STR_VEHICLE_JOYFIELD_DESC               :{SILVER}
 STR_VEHICLE_JOYFIELD_ARTICULATED_DESC   :{SILVER}
 STR_VEHICLE_RAREGEM_DESC                :{SILVER}WD6110CHEVG01 公交车是 2020 年代芜湖大街上最为常见的车型。
 STR_VEHICLE_MILKYWAY_2DECKER_DESC       :{SILVER}
+STR_VEHICLE_MILKYWAY_COACH_DESC         :{SILVER}
 
 STR_VEHICLE_HAPPYONE_DESC               :{SILVER}
 STR_VEHICLE_FREEDOM_DESC                :{SILVER}基于苏联 ZIS-150 的卡车。是中国第一种量产的汽车。
