--- a/road_vehicle/lang/english-uk.lng
+++ b/road_vehicle/lang/english-uk.lng
@@ -96,6 +96,7 @@ STR_VEHICLE_JOYFIELD_DESC               :{SILVER}
 STR_VEHICLE_JOYFIELD_ARTICULATED_DESC   :{SILVER}
 STR_VEHICLE_RAREGEM_DESC                :{SILVER}The WD6110CHEVG01 bus is a common sight in the streets of Wuhu in the 2020s.
 STR_VEHICLE_MILKYWAY_2DECKER_DESC       :{SILVER}
+STR_VEHICLE_MILKYWAY_COACH_DESC         :{SILVER}
 
 STR_VEHICLE_HAPPYONE_DESC               :{SILVER}
 STR_VEHICLE_LEEWAY_DESC                 :{SILVER}
