(aegis) add translations

--- a/industry/lang/chinese.lng
+++ b/industry/lang/chinese.lng
@@ -49,6 +49,14 @@ STR_PARAM_WORKFORCE_YETI_PASSENGERS         :专属 (Passengers)
 STR_PARAM_WORKFORCE_YETI_MAIL               :专属 (Mail)
 STR_PARAM_WORKFORCE_YETI_TIRED              :专属(Tired Worker)
 
+STR_PARAM_WORKER_PARTICIPATION      :宏观经济 - 工人就业
+STR_PARAM_WORKER_PARTICIPATION_DESC :选择工人参与到哪些工业的生产过程中。
+STR_PARAM_WORKER_PARTICIPATION_PRESET :使用预设玩法
+STR_PARAM_WORKER_PARTICIPATION_NONE :无（不使用工人）
+STR_PARAM_WORKER_PARTICIPATION_PRIMARY_INDUSTRY :第一产业
+STR_PARAM_WORKER_PARTICIPATION_SECONDARY_INDUSTRY :第二产业
+STR_PARAM_WORKER_PARTICIPATION_BOTH :所有产业
+
 STR_PARAM_TOWN_GOODS            :城镇 - 增长需求
 STR_PARAM_TOWN_GOODS_DESC       :选择城镇人口是否需要食物和水来增长。注意：这选项只有在合适的气候才会发挥作用。
 STR_PARAM_TOWN_GOODS_PRESET     :使用预设玩法
