--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -2,7 +2,9 @@
 STR_GRF_NAME                    :AWSS - Ahyangyi 的芜湖车站包
 STR_GRF_DESC                    :基于芜湖的车站设计的模组
 
-STR_STATION_DOVEMERE_2018_NAME  :芜湖火车站 (2018)
-STR_STATION_DOVEMERE_1992_NAME  :芜湖火车站 (1992)
+STR_STATION_DOVEMERE_2018_NAME          :站房
+STR_STATION_DOVEMERE_NORTH_2018_NAME    :站房
+STR_STATION_DOVEMERE_1992_NAME          :芜湖火车站 (1992)
 
 STR_STATION_CLASS_DM18          :芜湖火车站 (2018)
+STR_STATION_CLASS_DN18          :芜湖北火车站 (2018)
