--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -6,3 +6,4 @@ STR_STATION_DOVEMERE_2018_NAME  :芜湖火车站 (2018)
 STR_STATION_DOVEMERE_1992_NAME  :芜湖火车站 (1992)
 
 STR_STATION_CLASS_DM18          :芜湖火车站 (2018)
+STR_STATION_CLASS_DM92          :芜湖火车站 (1992)
