--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -6,3 +6,4 @@ STR_STATION_DOVEMERE_2018_NAME  :Station Building
 STR_STATION_DOVEMERE_1992_NAME  :Wuhu Railway Station (1992)
 
 STR_STATION_CLASS_DM18          :Wuhu Railway Station (2018)
+STR_STATION_CLASS_PLAT          :Platforms
