--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -9,5 +9,12 @@ STR_STATION_CLASS_E88A9CA       :芜湖火车站 (2018) - 自动站房
 STR_STATION_CLASS_E88A9CF       :芜湖火车站 (2018) - 模块化站房（前）
 STR_STATION_CLASS_E88A9CB       :芜湖火车站 (2018) - 模块化站房（后）
 STR_STATION_CLASS_E88A9CC       :芜湖火车站 (2018) - 模块化站房（中）
+STR_STATION_CLASS_E88A9CI       :芜湖火车站 (2018) - 模块化站房（侧1）
+STR_STATION_CLASS_E88A9CJ       :芜湖火车站 (2018) - 模块化站房（侧2）
+STR_STATION_CLASS_E88A9CK       :芜湖火车站 (2018) - 模块化站房（侧3）
 STR_STATION_CLASS_E88A9CH       :芜湖火车站 (2018) - 模块化站房（扁）
+
 STR_STATION_CLASS_PLAT          :站台
+
+STR_METASTATION_CLASS_E88A9CA   :芜湖火车站 (2018)
+STR_METASTATION_CLASS_PLAT      :站台
