--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -14,7 +14,8 @@ STR_STATION_CLASS_E88A9CJ       :Wuhu Railway Station (2018) - Modular Station B
 STR_STATION_CLASS_E88A9CK       :Wuhu Railway Station (2018) - Modular Station Building, Side C
 STR_STATION_CLASS_E88A9CL       :Wuhu Railway Station (2018) - Modular Station Building, Side D
 STR_STATION_CLASS_E88A9CH       :Wuhu Railway Station (2018) - Modular Station Building, Narrow
-STR_STATION_CLASS_E88A9CT       :Wuhu Railway Station (2018) - Modular Station Building, Junction
+STR_STATION_CLASS_E88A9CT       :Wuhu Railway Station (2018) - Modular Station Building, Irregular
+STR_STATION_CLASS_E88A9CX       :Wuhu Railway Station (2018) - Modular Station Building, Junction
 
 STR_STATION_CLASS_PLAT          :Platforms
 
