--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -14,7 +14,8 @@ STR_STATION_CLASS_E88A9CJ       :芜湖火车站 (2018) - 模块化站房（侧2
 STR_STATION_CLASS_E88A9CK       :芜湖火车站 (2018) - 模块化站房（侧3）
 STR_STATION_CLASS_E88A9CL       :芜湖火车站 (2018) - 模块化站房（侧4）
 STR_STATION_CLASS_E88A9CH       :芜湖火车站 (2018) - 模块化站房（扁）
-STR_STATION_CLASS_E88A9CT       :芜湖火车站 (2018) - 模块化站房（岔）
+STR_STATION_CLASS_E88A9CT       :芜湖火车站 (2018) - 模块化站房（异）
+STR_STATION_CLASS_E88A9CX       :芜湖火车站 (2018) - 模块化站房（汇）
 
 STR_STATION_CLASS_PLAT          :站台
 
