--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -2,8 +2,9 @@
 STR_GRF_NAME                    :AWSS - Ahyangyi 的芜湖车站包
 STR_GRF_DESC                    :基于芜湖的车站设计的模组
 
-STR_STATION_DOVEMERE_2018_NAME  :芜湖火车站 (2018)
-STR_STATION_DOVEMERE_1992_NAME  :芜湖火车站 (1992)
+STR_STATION_TILE_DEFAULT        :站房
+STR_STATION_TILE_UNTRAVERSABLE  :站房（不可通行）
+STR_STATION_TILE_PLATFORM       :平台
 
 STR_STATION_CLASS_E88A9CA       :芜湖火车站 (2018) - 自动站房
 STR_STATION_CLASS_E88A9CF       :芜湖火车站 (2018) - 模块化站房（前）
